# HPC-Checklist

./: README.md
01_C++11_20/: 01_C++11-20.txt  02_auto_usage.cpp  03_decltype.cpp  04_lambda.cpp  05_lValue_rValue.cpp  06_move_constructor.cpp  07_move_assignment.cpp  08_unique_pointers.cpp  09_shared_pointer.cpp  10_weak_pointer.cpp  11_forward.cpp  12_constexpr.cpp  13_exception_safety.cpp  14_optional.cpp  15_concepts.cpp  16_ranges.cpp  17_span.cpp  18_RAII_Point.cpp  18_conditional_variables.cpp
02_CPP_Mem_Management/: 01_memory_management.txt  02_smart_pointers.cpp  03_vector_smrt_ptr.cpp
03_Cache_Hierarchy/: 01_CPU_Cache Hierarchy.txt
04_SIMD_AVX_SSE/: 01_SIMD.txt  02_SSE_vector_sum_implementation.cpp  03_aligned_SSE_vector_addition.cpp  04_AVX_sum.cpp  05_AVX512_sum.cpp
05_CUDA_fundamentals/: 01_CUDA_Fundamentals.txt
05_CUDA_fundamentals/05_convolution/02_naive_gpu/: CMakeLists.txt  main.cu
05_CUDA_fundamentals/08_ray_tracing/: CMakeLists.txt  cube.stl  main.cu
06_GPU_mem_hierarchy/: 01_GPU_Mem_Hierarchy.txt  02_GPU_architectures.txt
07_MPI_Point_to_Point/: 01_OpenMP_Basics.txt  02_MPI_basics.txt  03_point_to_point_comm.txt  04_hello_MPI.c  05_process_0_to_1.c  06_MPIsend_recv.c
08_non_block_comm/: Non_blocking_Comm.txt
09_cluster_architecture_basics/: 01_Cluster_Architecture.txt
10_performance_roofline_model/: 01_Roofline Model.txt
11_strong_vs_weak_scaling/: Weak_Vs_Strong_Scaling.txt
12_graphs_BFS_DFS/: 01_Graphs.txt  01_dfs.cpp  02_flood_fill.cpp  04_edgeToAdjacency.cpp  04_hamiltonian_path.cpp  05_AdjacencyToEdge.cpp  Graphs.txt  (+11 more)
(+66 files in other folders)
